--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -20,8 +23,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Setup Java
       uses: actions/setup-java@v3
       with:
         java-version: '17'
