--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,9 +13,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    
-permissions:
-  contents: read
 
 jobs:
   build:
@@ -23,12 +20,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Setup Java
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
+        cache: maven
     - name: Build with Maven
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      run: mvn -B package --file pom.xml
