--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  init:
+  initial:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#executor-job
     docker:
@@ -15,7 +15,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "init"
+          name: "Initial"
           command: "echo Hi!"
 
 # Orchestrate jobs using workflows
