--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,9 @@ version: 2.1
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
   initial:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+    # Specify the execution environment.
     docker:
       - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - checkout
       - run:
@@ -21,9 +18,12 @@ jobs:
   # Add a new job for running the Dependency-Check
   dependency-check:
     docker:
-      - image: cimg/base:stable
+      - image: circleci/openjdk:17
     steps:
       - checkout
+      - run:
+          name: "Install Maven"
+          command: sudo apt-get update && sudo apt-get install -y maven
       - run:
           name: "Run Dependency-Check"
           command: |
