move all files in new module

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -2,7 +2,8 @@ FROM maven:3.8.4-openjdk-17 AS build
 WORKDIR /usr/src
 
 COPY pom.xml .
-COPY src ./src
+COPY ../ /usr/src/
+
 RUN mvn clean package -DskipTests
 
 # Create a smaller runtime image
@@ -10,8 +11,6 @@ FROM openjdk:17-jdk-slim
 WORKDIR /usr/src
 
 COPY --from=build /usr/src/target/LCPA-0.0.1-SNAPSHOT.jar /usr/src/LCPA-0.0.1-SNAPSHOT.jar
-
-COPY . .
 
 EXPOSE 8080
 
