--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
     <artifactId>LCPA</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <packaging>pom</packaging>
+    <modules>
+        <module>core</module>
+    </modules>
+
     <properties>
         <java.version>17</java.version>
         <slf4j.api-version>2.0.3</slf4j.api-version>
