--- a/core/pom.xml
+++ b/core/pom.xml
@@ -9,6 +9,7 @@
         <groupId>LCPA</groupId>
         <artifactId>LCPA</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
 </project>
