--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,9 @@ FROM node:20-alpine3.18
 
 WORKDIR /app
 
-COPY package*.json .
+COPY package*.json ./
 
-RUN npm install --force
+RUN npm install --force --legacy-peer-deps
 
 COPY . .
 EXPOSE 3000
