--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,19 @@
             <groupId>systems.manifold</groupId>
             <artifactId>manifold-javadoc-agent</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.3.10</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>6.0.9</version>
+        </dependency>
     </dependencies>
 
     <build>
