--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   core:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: core/Dockerfile
     image: assembly:latest
     ports:
       - "8080:8080"
